--- a/src/main/resources/assets/bmnw/lang/en_us.json
+++ b/src/main/resources/assets/bmnw/lang/en_us.json
@@ -150,5 +150,6 @@
   "tooltip.bmnw.shift_for_info": "§7Press [SHIFT] for more info",
   "tooltip.bmnw.soulfire_bomb": "§b[Soulfire Bomb]§r",
   "tooltip.bmnw.very_hot_item": "§e[Extremely Hot]§r",
-  "text.bmnw.click_to_cmd": "Click to run command"
+  "text.bmnw.click_to_cmd": "Click to run command",
+  "itemGroup.bmnw.silly": "pls dont look here uwu"
 }
