Deepslate Builder's Furnace assets

--- a/src/main/resources/assets/bmnw/lang/en_us.json
+++ b/src/main/resources/assets/bmnw/lang/en_us.json
@@ -151,5 +151,6 @@
   "tooltip.bmnw.soulfire_bomb": "§b[Soulfire Bomb]§r",
   "tooltip.bmnw.very_hot_item": "§e[Extremely Hot]§r",
   "text.bmnw.click_to_cmd": "Click to run command",
-  "itemGroup.bmnw.silly": "pls dont look here uwu"
+  "itemGroup.bmnw.silly": "pls dont look here uwu",
+  "block.bmnw.deepslate_builders_furnace": "Deepslate Builder's Furnace"
 }
