--- a/src/main/resources/assets/bmnw/lang/en_us.json
+++ b/src/main/resources/assets/bmnw/lang/en_us.json
@@ -65,7 +65,7 @@
   "block.bmnw.steel_reinforced_glass": "Reinforced Glass",
   "block.bmnw.stone_steam_hotspot": "Stone Steam Hotspot",
   "block.bmnw.telescope": "Telescope",
-  "block.bmnw.telescope.desc": "§7cyan pls dont sue",
+  "block.bmnw.telescope.desc": "§7cyan worlds, pls dont sue",
   "block.bmnw.test_particle_spawner": "Test Particle Spawner",
   "block.bmnw.thorium_block": "Block of Thorium",
   "block.bmnw.thorium_ore": "Thorium Ore",
